--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ibtihal"
+  name             : "Ibtihal Ferwana"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "Graduate CS Student"
   github           : "IbtihalFerwana"
   linkedin         : "https://www.linkedin.com/in/ibtihal-ferwana/"
   twitter          : "ibtihalferwana"
