--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Ibtihal Ferwana"
+  name             : "Ibtihal ابتهال"
   avatar           : "profile.png"
   bio              : "Graduate CS Student"
   github           : "IbtihalFerwana"
