--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ibtihal ابتهال"
-  avatar           : "profile.png"
+  avatar           : "profile.JPG"
   bio              : "Graduate CS Student"
   github           : "IbtihalFerwana"
   linkedin         : "ibtihal-ferwana"
