--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Ibtihal ابتهال"
   avatar           : "profile.JPG"
-  bio              : "CS Graduate Student"
+  bio              : "Graduate Student"
   github           : "IbtihalFerwana"
   linkedin         : "ibtihal-ferwana"
   twitter          : "ibtihalferwana"
