added my personal profile picture

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Ibtihal ابتهال"
-  avatar           : "profile.JPG"
+  avatar           : "blue background.jpg"
   bio              : "Graduate Student"
   github           : "IbtihalFerwana"
   linkedin         : "ibtihal-ferwana"
